syntax = "proto3";
package s2s;
option go_package = ".;s2s";
// client  <-> server  10000 - 19999
enum MessageCmd //枚举消息类型
{
  NULL = 0;
  Login = 1;
}

enum ErrorCode {
  OK = 0;
}


message LoginReq{
  string uid = 1;
  string passwd =2;
}

message Result {
  int32 code=1;
  string msg=2;
}
message LoginResp {
  Result result = 1;
  string uid = 2;
  string passwd = 3;
  string name = 4;
}


message GenUIDReq {
  int32 channel = 1;
}

message GenUIDResp {
   Result result = 1;
  uint64 uid = 2;
}

message GenUIDsReq {
  int32 channel = 1;
  int32 num = 2;
}

message GenUIDsResp {
   Result result = 1;
   repeated uint64 uid = 2;

}